--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
   <h1>Hello! I'm Yukti 👋</h1>
-  <p>📍 M.Sc. Bioinformatics | Aspiring Scientist & Professor </p>
+  <p>📍 M.Sc. Bioinformatics | Aspiring Scientist</p>
   <p>🔬 Focus: Genomics, Computational Biology, Drug Discovery</p>
-  <p>📄 Resume: <a href="">Download Resume</a></p>
+  <p>📄 Resume: <a href="https://github.com/user-attachments/files/21197104/Resume.for.Linkedin.pdf" target="_blank" download>Download Resume</a></p>
   <p>📫 Contact: yukti257@gmail.com</p>
 </body>
 </html>
