--- a/index (1).html
+++ b/index (1).html
@@ -111,7 +111,7 @@
     </div>
 
     <!-- Profile Photo -->
-    <img src="https://github.com/user-attachments/assets/074f8129-6f51-40c2-b18c-fbc831e66c0e" alt="Yukti Sabikhi" class="profile-img" />
+    <img src="![yukti jpg](https://github.com/user-attachments/assets/b7e9888e-e71a-4dfb-82a9-6e1c7208800b)" alt="Yukti Sabikhi" class="profile-img" />
 
     <!-- Resume Button -->
     <div>
